--- a/app/templates/list_people.html
+++ b/app/templates/list_people.html
@@ -5,6 +5,11 @@
 {% endblock %}
 {% block content %}
 
+    <button  style="cursor:pointer; color: white; font-weight: bold; margin: 20px; padding: 20px; width: 200px; alignment: left;
+         background-color: rgba(255, 0, 0, 0.5); border-radius: 20px"
+     onclick="window.location.href='{{ url_for("auth.logout") }}';">LOGOUT</button>
+
+
     <div class="leftnav">
         <form class="form-inline" method="POST" action="{{ url_for('show.get_all_people') }}">
             <label for="filter">Filter</label>
