--- a/app/templates/person.html
+++ b/app/templates/person.html
@@ -4,6 +4,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 {% endblock %}
 
+<button  style="cursor:pointer; color: white; font-weight: bold; margin: 20px; padding: 20px; width: 200px; alignment: left;
+         background-color: rgba(255, 0, 0, 0.5); border-radius: 20px"
+     onclick="window.location.href='{{ url_for("auth.logout") }}';">LOGOUT</button>
+
+
 {% block content %}
 
     <button  style="cursor:pointer; color: white; font-weight: bold; margin: 20px; padding: 20px; width: 200px;
